# mra

./: .gitignore  04-tokio-multi-agent-swarm.org  CLAUDE.md  Cargo.toml  README.md  README.org  mra.example.toml
.agent-shell/transcripts/: 2026-03-27-00-51-25.md
.github/workflows/: ci.yml
.mra/roles/: coder.md
docs/: 2026-03-18-tool-system-design.md  2026-05-04-mra-agent-framework-design.md
examples/: pipeline.rs
plans/: 2026-03-28-restart-manager.md  agent-spawn-builder.md  tool-demo-coding-agent.md
src/: budget.rs  config.rs  error.rs  ids.rs  lib.rs  main.rs  runtime.rs
src/agent/: ctx.rs  handle.rs  mailbox.rs  message.rs  mod.rs  runner.rs  spawn.rs
src/llm/: mod.rs  openrouter.rs
src/runtime/: cli.rs  http.rs  mod.rs  roles.rs
src/sandbox/: mod.rs
src/session/: mod.rs
src/supervisor/: child.rs  config.rs  event.rs  handle.rs  lifecycle.rs  mod.rs  restart_manager.rs  runner.rs  tracker.rs
src/tool/: edit_file.rs  mod.rs  read_file.rs  shell.rs
src/wasm/: limits.rs  manifest.rs  mod.rs  tool.rs
tests/: agent.rs  budget.rs  budget_integration.rs  config.rs  error.rs  ids.rs  llm.rs  runtime.rs  spawn_builder.rs  supervisor.rs  tool.rs  wasm.rs
tests/fixtures/: bad_output_tool.wasm  infinite_loop_tool.wasm  memory_hog_tool.wasm
tests/fixtures/bad_output_tool/: Cargo.toml
tests/fixtures/bad_output_tool/src/: lib.rs
tests/fixtures/echo_tool/: Cargo.toml
tests/fixtures/echo_tool/src/: lib.rs
tests/fixtures/infinite_loop_tool/: Cargo.toml
tests/fixtures/infinite_loop_tool/src/: lib.rs
tests/fixtures/memory_hog_tool/: Cargo.toml
tests/fixtures/memory_hog_tool/src/: lib.rs
tests/fixtures/tools/echo/: echo_tool.wasm  tool.toml
