[package]
name = "mra"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[[bin]]
name = "demo"
path = "src/bin/demo.rs"
