[package]
name = "mra"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
description = "Tokio-native multi-agent runtime with Erlang-style supervision"
keywords = ["agent", "actor", "tokio", "supervision", "llm"]
categories = ["asynchronous", "concurrency"]
readme = "README.org"
repository = "https://github.com/yuann3/mra"
license = "MIT"

[dependencies]
arc-swap = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
reqwest = { version = "0.12", features = ["json"] }
figment = { version = "0.10", features = ["toml", "env"] }
toml = "0.8"
schemars = "1"

[[bin]]
name = "demo"
path = "src/bin/demo.rs"

[dev-dependencies]
tempfile = "3.27.0"
