[workspace]
exclude = ["tests/fixtures/echo_tool", "tests/fixtures/infinite_loop_tool", "tests/fixtures/memory_hog_tool", "tests/fixtures/bad_output_tool"]

[package]
name = "mra"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
description = "Tokio-native multi-agent runtime with Erlang-style supervision"
keywords = ["agent", "actor", "tokio", "supervision", "llm"]
categories = ["asynchronous", "concurrency"]
readme = "README.org"
repository = "https://github.com/yuann3/mra"
license = "MIT"

[dependencies]
arc-swap = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
reqwest = { version = "0.12", features = ["json"] }
figment = { version = "0.10", features = ["toml", "env"] }
toml = "0.8"
schemars = "1"
tempfile = "3.27.0"
futures-core = "0.3"
axum = { version = "0.8", optional = true }
futures-util = { version = "0.3", optional = true }

[features]
default = []
http = ["axum", "futures-util"]

[[bin]]
name = "demo"
path = "src/bin/demo.rs"

[[bin]]
name = "demo_supervisor"
path = "src/bin/demo_supervisor.rs"

[[bin]]
name = "demo_tools"
path = "src/bin/demo_tools.rs"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
